--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
     <header>
         <span>Header Logo</span>
         <ul>
-            <li><a href="">link one</a></li>
-            <li><a href="">link two</a></li>
-            <li><a href="">link three</a></li>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
         </ul>
     </header>
 
     <!-- Partie grise du site -->
     <div class="hero">
-        <div>
+        <div class="hero-title">
             <h1 id="hero-main">This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <div>
-            this is a placeholder for an image
+        <div class="hero-img">
+            <p>this is a placeholder for an image</p>
         </div>
     </div>   
 
     <!-- Partie blanche -->
-    <div>
+    <div class="information">
         <h2>Some random information.</h2>
-        <div>this is some subtext under an illustration or image.</div>
-        <div>this is some subtext under an illustration or image.</div>
-        <div>this is some subtext under an illustration or image.</div>
-        <div>this is some subtext under an illustration or image.</div>
+        <div class="info-items">
+            <div>this is some subtext under an illustration or image.</div>
+            <div>this is some subtext under an illustration or image.</div>
+            <div>this is some subtext under an illustration or image.</div>
+            <div>this is some subtext under an illustration or image.</div>
+        </div>
     </div>
 
     <!-- Partie grise -->
